# patient-encounter-system

./: .env  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci-notes.md  ci.yml  integration.yml
alembic/: env.py
alembic/versions/: 0001_initial.py
scripts/: docker-entrypoint.sh  run_migrations.py  seed_data.py  test_connection.py  validate_secrets.py
src/: create_tables.py  database.py  main.py
src/models/: appointment.py  doctor.py  patient.py
src/schemas/: appointment.py  doctor.py  patient.py
src/services/: appointment_service.py
tests/: conftest.py  test_appointments.py  test_email_unique.py
tests/integration/: test_api.py  test_concurrency.py
